--- a/lebron/lebron-server/src/main/resources/properties/jdbc.properties
+++ b/lebron/lebron-server/src/main/resources/properties/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://127.0.0.1:3306/lbjnet?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.url=jdbc:mysql://127.0.0.1:3306/lbjnet?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
