--- a/lebron/pom.xml
+++ b/lebron/pom.xml
@@ -295,5 +295,11 @@
 			<artifactId>webmagic-extension</artifactId>
 			<version>0.7.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-selenium</artifactId>
+			<version>0.5.2</version>
+		</dependency>
 	</dependencies>
 </project>
